@@ -1,5 +1,17 @@
 2008-03-12  Dan Williams  <dcbw@redhat.com>
 
+	* configure.ac
+		- Bring in the bits of gnome-common we actually use (all 15 lines)
+
+	* src/Makefile.am
+	  src/connection-editor/Makefile.am
+	  src/main.c
+	  src/vpn-properties/Makefile.am
+	  src/vpn-properties/nm-vpn-properties.c
+		- s/GNOMELOCALEDIR/NMALOCALEDIR
+
+2008-03-12  Dan Williams  <dcbw@redhat.com>
+
 	* src/applet-dialogs.c
 		- (info_dialog_update): 802.11 speed is now in Kb/s
 
